k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: zpm-registry
  namespace: iris
spec:
  rules:
  - host: test.pm.community.intersystems.com
    http:
      paths:
      - backend:
          serviceName: zpm-registry
          servicePort: 52773
        path: /
  tls:
  - hosts:
    - test.pm.community.intersystems.com
    secretName: test.pm.community.intersystems.com
